--- a/hunav_agent_manager/package.xml
+++ b/hunav_agent_manager/package.xml
@@ -16,6 +16,7 @@
   <depend>people_msgs</depend>
   <depend>tf2</depend>
   <depend>tf2_ros</depend>
+  <depend>tf2_geometry_msgs</depend>
   <depend>nav2_behavior_tree</depend>
   <depend>behaviortree_cpp_v3</depend>
 
